hphp/test/zend/good/Zend/tests/errmsg_026.php.expectf

Fatal error: Class already declared: stdclass in %s/errmsg_026.php on line 3
